styles/projects.css
.firstName {
    color: white;
}

.lastName {
    color: #E8EDE7;
    font-weight: bold;
}

body {
    font-family: 'Raleway', sans-serif;
    color: white;
    font-size: 18px;
    background-color: #5d5d5d;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Josefin Sans', sans-serif;
}
h1{
    text-transform: uppercase;
}
h2 {
    font-size: 50px;
    text-decoration-style: solid;
}

h3 {
    color: #C0C0C0;
    font-size: 28px;
    text-align: center;
}

h4 {
    font-size: 30px;
}

p {
    font-size: 20px;
    color: #E8EDE7;
}

a:link, a:visited {
    color: #51bb59;
}

a:hover {
    color: #2f6b34;
    text-decoration: underline;
}
.extlink {
    text-align: center;
    font-size: 18px;
}

.row {
    padding-left: 20%;
    padding-right: 20%;
}


.post {
    color: black;
    background: rgba(81, 187, 89, 0.4);
    text-align: left;
    border: solid #5d5d5d 8px;
    min-height: 450px;

}

.footer {
    padding-top: 5%;
    background: rgba(81, 187, 89, 0.4);
}
.footer.row{
    padding-top: 30px;
    padding-bottom: 60px;
}

